src/CAPI/CAPI_LineCodes.pas


    with pLineCode do
    begin
        Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, Sqr(FNphases));
        k := 0;
        for i := 1 to FNPhases do
            for j := 1 to FNphases do
            begin
                Result[k] := Z.GetElement(i, j).im;
                Inc(k);
            end;
    end;
end;

procedure LineCodes_Get_Xmatrix_GR(); CDECL;
// Same as LineCodes_Get_Xmatrix but uses global result (GR) pointers
begin
    LineCodes_Get_Xmatrix(DSSPrime.GR_DataPtr_PDouble, @DSSPrime.GR_Counts_PDouble[0])
end;

//------------------------------------------------------------------------------
procedure LineCodes_Set_Cmatrix(ValuePtr: PDouble; ValueCount: TAPISize); CDECL;
var
    Value: PDoubleArray0;
    i, j, k: Integer;
    Factor: Double;
    pLineCode: TLineCodeObj;
begin
    if not _activeObj(DSSPrime, pLineCode) then
        Exit;

    Value := PDoubleArray0(ValuePtr);

    with pLineCode do
    begin
        if (FNPhases * FNPhases) <> ValueCount then
        begin
            DoSimpleMsg(
                'The number of values provided (%d) does not match the expected (%d).', 
                [ValueCount, FNPhases * FNPhases],
            183);
            Exit;
        end;
    
        Factor := TwoPi * BaseFrequency * 1.0e-9;
        k := 0;
        for i := 1 to FNPhases do
            for j := 1 to FNphases do
            begin
                Yc.SetElement(i, j, Cmplx(0.0, Value[k] * Factor));
                Inc(k);
            end;
    end;
end;
//------------------------------------------------------------------------------
procedure LineCodes_Set_Rmatrix(ValuePtr: PDouble; ValueCount: TAPISize); CDECL;
var
    Value: PDoubleArray0;
    i, j, k: Integer;
    pLineCode: TLineCodeObj;
    Ztemp: complex;

begin
    if not _activeObj(DSSPrime, pLineCode) then
        Exit;

    Value := PDoubleArray0(ValuePtr);

    with pLineCode do
    begin
        if (FNPhases * FNPhases) <> ValueCount then
        begin
            DoSimpleMsg(
                'The number of values provided (%d) does not match the expected (%d).', 
                [ValueCount, FNPhases * FNPhases],
            183);
            Exit;
        end;

        k := 0;
        for i := 1 to FNPhases do
            for j := 1 to FNphases do
            begin
                ZTemp := Z.GetElement(i, j);
                Z.SetElement(i, j, Cmplx(Value[k], ZTemp.im));
                Inc(k);
            end;
    end;
end;
//------------------------------------------------------------------------------
procedure LineCodes_Set_Xmatrix(ValuePtr: PDouble; ValueCount: TAPISize); CDECL;
var
    Value: PDoubleArray0;
    i, j, k: Integer;
    pLineCode: TLineCodeObj;
    Ztemp: complex;

begin
    if not _activeObj(DSSPrime, pLineCode) then
        Exit;

    Value := PDoubleArray0(ValuePtr);

    with pLineCode do
    begin
        if (FNPhases * FNPhases) <> ValueCount then
        begin
            DoSimpleMsg(
                'The number of values provided (%d) does not match the expected (%d).', 
                [ValueCount, FNPhases * FNPhases],
            183);
            Exit;
        end;
    
        k := 0;
        for i := 1 to FNPhases do
            for j := 1 to FNphases do
            begin
                ZTemp := Z.GetElement(i, j);
                Z.SetElement(i, j, Cmplx(ZTemp.re, Value[k]));
                Inc(k);
            end;
    end;
end;
//------------------------------------------------------------------------------
function LineCodes_Get_NormAmps(): Double; CDECL;
var
    pLineCode: TLineCodeObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, pLineCode) then
        Exit;

    Result := pLineCode.NormAmps;
end;
//------------------------------------------------------------------------------
procedure LineCodes_Set_NormAmps(Value: Double); CDECL;
var
    pLineCode: TLineCodeObj;
begin
    if not _activeObj(DSSPrime, pLineCode) then
        Exit;

    pLineCode.NormAmps := Value;
end;
//------------------------------------------------------------------------------
function LineCodes_Get_EmergAmps(): Double; CDECL;
var
    pLineCode: TLineCodeObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, pLineCode) then
        Exit;

    Result := pLineCode.EmergAmps;
end;
//------------------------------------------------------------------------------
procedure LineCodes_Set_EmergAmps(Value: Double); CDECL;
var
    pLineCode: TLineCodeObj;
begin
    if not _activeObj(DSSPrime, pLineCode) then
        Exit;
        
    pLineCode.EmergAmps := Value;
end;
//------------------------------------------------------------------------------
procedure LineCodes_Get_AllNames(var ResultPtr: PPAnsiChar; ResultCount: PAPISize); CDECL;
begin
    DefaultResult(ResultPtr, ResultCount);
    if InvalidCircuit(DSSPrime) then
        Exit;
    Generic_Get_AllNames(ResultPtr, ResultCount, DSSPrime.LineCodeClass.ElementList, False);
end;

procedure LineCodes_Get_AllNames_GR(); CDECL;
// Same as LineCodes_Get_AllNames but uses global result (GR) pointers
begin
    LineCodes_Get_AllNames(DSSPrime.GR_DataPtr_PPAnsiChar, @DSSPrime.GR_Counts_PPAnsiChar[0])
end;

//------------------------------------------------------------------------------
function LineCodes_Get_idx(): Integer; CDECL;
begin
    Result := 0;
    if InvalidCircuit(DSSPrime) then
        Exit;
    Result := DSSPrime.LineCodeClass.ElementList.ActiveIndex
end;
//------------------------------------------------------------------------------
procedure LineCodes_Set_idx(Value: Integer); CDECL;
begin
    if DSSPrime.LineCodeClass.ElementList.Get(Value) = NIL then
        DoSimpleMsg(DSSPrime, 'Invalid %s index: "%d".', ['LineCode', Value], 656565);
end;
//------------------------------------------------------------------------------
end.
